# email-bot

./: .gitignore  Cargo.toml  Cross.toml  README.md  config.example.json  email-bot.init
src/: config.rs  discord.rs  graph_listener.rs  imap_listener.rs  main.rs  oauth2.rs  state.rs
