[package]
name = "email-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
async-imap = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "aws-lc-rs"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
rustls-pki-types = "1"
webpki-roots = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mail-parser = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
html2text = "0.14"
futures = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true


